Add link class and unordered list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <div class="header">
     <div class="logo">
         Header Logo 
-    </div>     
+    </div>
+    <ul class="links">
+        <li><a href="google.com">link-one</a></li>
+        <li><a href="google.com">link-two</a></li>
+        <li><a href="google.com">linke-three</a></li>
+</ul>
+    </div>
 </body>
 </html>
