--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
 </ul>
     </div>
 </body>
+<p>This website is awesome</p>
+<p>This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 </html>
