--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
 </body>
 <p>This website is awesome</p>
 <p>This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
+<button>Sign up</button>
 </html>
