Add classes to paragraphs

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         Header Logo 
     </div>
     <ul class="links">
-        <li><a href="google.com">link-one</a></li>
-        <li><a href="google.com">link-two</a></li>
-        <li><a href="google.com">linke-three</a></li>
+        <li><a href="google.com">link one</a></li>
+        <li><a href="google.com">link two</a></li>
+        <li><a href="google.com">link three</a></li>
 </ul>
     </div>
-</body>
-<p>This website is awesome</p>
-<p>This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
+<p class="main">This website is awesome</p>
+<p class="second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
+</body>
+</div>
 </html>
