--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div class="hero">
     <div class="header">
     <div class="logo">
         Header Logo 
@@ -17,9 +18,11 @@
         <li><a href="google.com">link three</a></li>
 </ul>
     </div>
+
 <p class="main">This website is awesome</p>
 <p class="second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
+    </div>
 </body>
 </div>
 </html>
