--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <p class="main">This website is awesome</p>
 <p class="second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
-    </div>
+<img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">    
+</div>
 </body>
 </div>
 </html>
