--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="hero">
+    <div class="container">
     <div class="header">
     <div class="logo">
         Header Logo 
