--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <li><a href="google.com">link two</a></li>
         <li><a href="google.com">link three</a></li>
 </ul>
-    </div>
-    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300">    
-<p class="main">This website is awesome</p>
+    </div>    
+<div class="container2">
+<p class="main">This website is awesome</p> 
+<img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300">    
+</div>
 <p class="second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
 </div>
