--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
      <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="container">
+    <div class="nav-bar">
     <div class="header">
     <div class="logo">
         Header Logo 
+    </div>
     </div>
     <ul class="links">
         <li><a href="google.com">link one</a></li>
@@ -18,12 +19,14 @@
         <li><a href="google.com">link three</a></li>
 </ul>
     </div>    
-<div class="container2">
-<p class="main">This website is awesome</p> 
-<img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300">    
-</div>
-<p class="second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
+    <div class="hero-container"> 
+    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300">    
+     <div class="htext-container">
+<p class="hero-main">This website is awesome</p>  
+<p class="hero-second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
+     </div> 
+</div>
 </div>
 </body>
 </div>
