--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 </ul>
     </div>    
     <div class="hero-container"> 
-    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300">    
+    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300" alt="First Generation Mustang">    
      <div class="htext-container">
 <p class="hero-main">This website is awesome</p>  
 <p class="hero-second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
 <button>Sign up</button>
      </div> 
 </div>
- <h1>Ford Mustang throughout the years</h1>
-<img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto">
-<img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto">
-<img src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto">
-<img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto">
+ <h1>Ford Mustangs throughout the years</h1>
+<img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
+<img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
+<img src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto" alt="Fourth Generation Mustang">
+<img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
 </div>
 </body>
 </div>
