--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
      </div> 
 </div>
  <h1>Ford Mustangs throughout the years</h1>
-<img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
+<div class="gen-cont">
+ <img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
 <img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
 <img src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto" alt="Fourth Generation Mustang">
 <img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
+</div>
 </div>
 </body>
 </div>
