--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <button>Sign up</button>
      </div> 
 </div>
- <h1>Ford Mustangs throughout the years</h1>
+ <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
 <div class="gen-cont">
  <img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
 <img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
