Add gen-text class and four paragraph elements

--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
  <div class="gen-image">
 <img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
 </div>
+<p class="gen-text">Second Generation Mustang (1973-1978)</p>
 <div class="gen-image">
 <img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
 </div>
- <div class="gen-image">   
+<p class="gen-text">Third Generation Mustang (1978-1993)</p>
+<div class="gen-image">   
 <img src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto" alt="Fourth Generation Mustang">
- </div>
+</div>
+<p class="gen-text">Fourth Generation Mustang (1993-2004)</p> 
 <div class="gen-image">
  <img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
 </div>
+<p class="gen-text">Fifth Generation Mustang (2005-2014)</p>
 </div>
 </div>
 </body>
