--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
  <img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
 </div>
 </div>
+<div class="gentxt-con">
 <p class="gen-text">Second Generation Mustang (1973-1978)</p>
 <p class="gen-text">Third Generation Mustang (1978-1993)</p>
 <p class="gen-text">Fourth Generation Mustang (1993-2004)</p> 
 <p class="gen-text">Fifth Generation Mustang (2005-2014)</p>
+</div>
 </div>
 </body>
 </div>
