--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 </div>
 </div>
 <div class="gentxt-con">
-<p class="gen-text">Second Generation Mustang (1973-1978)</p>
-<p class="gen-text">Third Generation Mustang (1978-1993)</p>
-<p class="gen-text">Fourth Generation Mustang (1993-2004)</p> 
-<p class="gen-text">Fifth Generation Mustang (2005-2014)</p>
+<p class="gen-text">2nd Generation Mustang (1973-1978)</p>
+<p class="gen-text">3rd Generation Mustang (1978-1993)</p>
+<p class="gen-text">4th Generation Mustang (1993-2004)</p> 
+<p class="gen-text">5th Generation Mustang (2005-2014)</p>
 </div>
 </div>
 </body>
