Change gen-text from <p> class to <div> class and add <p> elements inside

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 </div>
 </div>
 <div class="gentxt-con">
-<p class="gen-text">2nd Generation Mustang (1973-1978)</p>
-<p class="gen-text">3rd Generation Mustang (1978-1993)</p>
-<p class="gen-text">4th Generation Mustang (1993-2004)</p> 
-<p class="gen-text">5th Generation Mustang (2005-2014)</p>
+<div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
+<div class="gen-text"><p>3rd Generation Mustang</p><p>(1978-1993)</p></div>
+<div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div> 
+<div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
 </div>
 </body>
