--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
 </div>
 </div>
-<div class="gentxt-con">
+<div class="gentxt-cont">
 <div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
 <div class="gen-text"><p>3rd Generation Mustang</p><p>(1978-1993)</p></div>
 <div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div> 
