Add quote container and put paragraph inside it

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div> 
 <div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
+<div class="quote"><p>Mustang is meant to be driven so that one can enjoy the hell out of all of it.</p></div>
 </div>
 </body>
 </div>
