Add author container and put paragraph inside it

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
 <div class="quote"><p>Mustang is meant to be driven so that one can enjoy the hell out of all of it.</p></div>
+<div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </body>
 </div>
