--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 <div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div> 
 <div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
+<div class="qa-cont">
 <div class="quote"><p>Mustang is meant to be driven so that one can enjoy the hell out of all of it.</p></div>
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
+</div>
 </div>
 </body>
 </div>
