Add two paragraphs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </div>
+<p>Call to action! It's time!</p>
+<p>Sign up for our product by clicking that button right over there!</p>
 </body>
 </div>
 </html>
