--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
      <div class="htext-container">
 <p class="hero-main">This website is awesome</p>  
 <p class="hero-second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
-<button>Sign up</button>
-     </div> 
+<button style="background-color: #3882f6; color: white;">Sign up</button>     
+</div> 
 </div>
  <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
 <div class="gen-cont">
@@ -53,7 +53,7 @@
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </div>
-<p>Call to action! It's time!</p>
+<p style="font-weight: bold;">Call to action! It's time!</p>
 <p>Sign up for our product by clicking that button right over there!</p>
 </body>
 </div>
