--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 </div>
 <p style="font-weight: bold;">Call to action! It's time!</p>
 <p>Sign up for our product by clicking that button right over there!</p>
+<button>Sign up</button>
 </body>
 </div>
 </html>
