--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </div>
+<div class="b-cont">
 <p style="font-weight: bold;">Call to action! It's time!</p>
 <p>Sign up for our product by clicking that button right over there!</p>
 <button>Sign up</button>
+</div>
 </body>
 </div>
 </html>
