--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </div>
 </div>
 <div class="b-cont">
-<p style="font-weight: bold;">Call to action! It's time!</p>
-<p>Sign up for our product by clicking that button right over there!</p>
+<p style="font-weight: bold;color: white;">Call to action! It's time!</p>
+<p style="color: white;">Sign up for our product by clicking that button right over there!</p>
 <button>Sign up</button>
 </div>
 </body>
