--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="b-cont">
 <p style="font-weight: bold;color: white;">Call to action! It's time!</p>
 <p style="color: white;">Sign up for our product by clicking that button right over there!</p>
-<button>Sign up</button>
+<button style="background-color: #3882f6; color: white; border: 1px solid white;">Sign up</button>
 </div>
 </body>
 </div>
