Add b2-cont around b-cont

--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </div>
+<div class="b2-cont">
 <div class="b-cont">
 <p style="font-weight: bold;color: white;">Call to action! It's time!</p>
 <p style="color: white;">Sign up for our product by clicking that button right over there!</p>
 <button style="background-color: #3882f6; color: white; border: 1px solid white;">Sign up</button>
+</div>
 </div>
 </body>
 </div>
