--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 </div>
 <div class="b2-cont">
 <div class="b-cont">
+<div class="cta-cont">
 <p style="font-weight: bold;color: white;">Call to action! It's time!</p>
 <p style="color: white;">Sign up for our product by clicking that button right over there!</p>
+</div>
 <button style="background-color: #3882f6; color: white; border: 1px solid white;">Sign up</button>
 </div>
 </div>
