Add footer container

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <button style="background-color: #3882f6; color: white; border: 1px solid white;">Sign up</button>
 </div>
 </div>
+<div class="footer"></div>
 </body>
 </div>
 </html>
