Add paragraph inside footer container

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <button style="background-color: #3882f6; color: white; border: 1px solid white;">Sign up</button>
 </div>
 </div>
-<div class="footer"></div>
+<div class="footer"><p>Copyright &copy; The Odin Project 2021</p></div>
 </body>
 </div>
 </html>
