Edit hero-main and hero-second paragraphs

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="hero-container"> 
     <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300" alt="First Generation Mustang">    
      <div class="htext-container">
-<p class="hero-main">This website is awesome</p>  
-<p class="hero-second">This website has some subtext that goes here under the main titile. It's a smaller font and and the color is lower contrast</p>
+<p class="hero-main">Ford Mustang Fansite</p>  
+<p class="hero-second">A website dedicated to the appreciation of an American Icon</p>
 <button style="background-color: #3882f6; color: white;">Sign up</button>     
 </div> 
 </div>
