Add image in logo container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nav-bar">
     <div class="header">
     <div class="logo">
-        Header Logo 
+        <img src="https://cdn.pixabay.com/photo/2014/03/24/17/20/mustang-295456_1280.png">
     </div>
     </div>
     <ul class="links">
