--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nav-bar">
     <div class="header">
     <div class="logo">
-        <img src="https://cdn.pixabay.com/photo/2014/03/24/17/20/mustang-295456_1280.png">
+        <img src="https://cdn.pixabay.com/photo/2014/03/24/17/20/mustang-295456_1280.png" width="50" height="auto" alt="Drawing of a horse's head"
     </div>
     </div>
     <ul class="links">
