Remove inline css from button in htext-container and add bt-1 class id to that button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nav-bar">
     <div class="header">
     <div class="logo">
-        <img src="https://cdn.pixabay.com/photo/2014/03/24/17/20/mustang-295456_1280.png" width="50" height="auto" alt="Drawing of a horse's head"
+        <img src="https://cdn.pixabay.com/photo/2014/03/24/17/20/mustang-295456_1280.png" width="50" height="auto" alt="Drawing of a horse's head">
     </div>
     </div>
     <ul class="links">
@@ -24,8 +24,8 @@
      <div class="htext-container">
 <p class="hero-main">Ford Mustang Fansite</p>  
 <p class="hero-second">A website dedicated to the appreciation of an American Icon</p>
-<button style="background-color: #3882f6; color: white;">Sign up</button>     
-</div> 
+<button class="bt-1">Sign up</button>     
+</div>
 </div>
  <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
 <div class="gen-cont">
