Edit hero-container image size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </ul>
     </div>    
     <div class="hero-container"> 
-    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="300" alt="First Generation Mustang">    
+    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="400" height="auto" alt="First Generation Mustang">    
      <div class="htext-container">
 <p class="hero-main">Ford Mustang Fansite</p>  
 <p class="hero-second">A website dedicated to the appreciation of an American Icon</p>
