--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     </div>
     <ul class="links">
-        <li><a href="google.com">link one</a></li>
-        <li><a href="google.com">link two</a></li>
-        <li><a href="google.com">link three</a></li>
+        <li><a href="google.com">About</a></li>
+        <li><a href="google.com">Photos</a></li>
+        <li><a href="google.com">Sign Up</a></li>
 </ul>
     </div>    
     <div class="hero-container"> 
