--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </ul>
     </div>    
     <div class="hero-container"> 
-    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="400" height="auto" alt="First Generation Mustang">    
+    <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="400" height="auto" alt="First Generation Mustang" >    
      <div class="htext-container">
 <p class="hero-main">Ford Mustang Fansite</p>  
 <p class="hero-second">A website dedicated to the appreciation of an American Icon</p>
@@ -30,19 +30,19 @@
  <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
 <div class="gen-cont">
  <div class="gen-image">
-<img src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
+<img class="border" src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg" width="200" height="auto" alt="Second Generation Mustang">
 <div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
 </div>
 <div class="gen-image">
-<img src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
+<img class="border" src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg" width="200" height="auto" alt="Third Generation Mustang">
 <div class="gen-text"><p>3rd Generation Mustang</p><p>(1978-1993)</p></div>
 </div>
 <div class="gen-image">   
-<img src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto" alt="Fourth Generation Mustang">
+<img class="border" src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200" height="auto" alt="Fourth Generation Mustang">
 <div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div>
 </div>
 <div class="gen-image">
- <img src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
+ <img class="border" src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg" width="200" height="auto" alt="Fifth Generation Mustang">
 <div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
 </div>
