Rename border class to gen-image2

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
  <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
 <div class="gen-cont">
  <div class="gen-image">
-<img class="border" src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg"  alt="Second Generation Mustang">
+<img class="gen-image2" src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg"  alt="Second Generation Mustang">
 <div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
 </div>
 <div class="gen-image">
-<img class="border" src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg"  alt="Third Generation Mustang">
+<img class="gen-image2" src="https://cdn.pixabay.com/photo/2021/08/22/03/55/car-6564066_1280.jpg"  alt="Third Generation Mustang">
 <div class="gen-text"><p>3rd Generation Mustang</p><p>(1978-1993)</p></div>
 </div>
 <div class="gen-image">   
-<img class="border" src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"  alt="Fourth Generation Mustang">
+<img class="gen-image2" src="https://images.pexels.com/photos/7588415/pexels-photo-7588415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"  alt="Fourth Generation Mustang">
 <div class="gen-text"><p>4th Generation Mustang</p><p>(1993-2004)</p></div>
 </div>
 <div class="gen-image">
- <img class="border" src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg"  alt="Fifth Generation Mustang">
+ <img class="gen-image2" src="https://cdn.pixabay.com/photo/2016/05/06/17/05/car-1376248_1280.jpg"  alt="Fifth Generation Mustang">
 <div class="gen-text"><p>5th Generation Mustang</p><p>(2005-2014)</p></div>
 </div>
 </div>
