Add id selector to hero-container, gen-cont, and b2-cont

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
     </div>
     <ul class="links">
-        <li><a href=".hero-container">About</a></li>
-        <li><a href=".gen-cont">Photos</a></li>
-        <li><a href=".b2-cont">Sign Up</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Photos">Photos</a></li>
+        <li><a href="#Signup">Sign Up</a></li>
 </ul>
     </div>    
-    <div class="hero-container"> 
+    <div id="About" class="hero-container"> 
     <img src="https://images.pexels.com/photos/18321507/pexels-photo-18321507/free-photo-of-vintage-ford-mustang.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="400" height="auto" alt="First Generation Mustang" >    
      <div class="htext-container">
 <p class="hero-main">Ford Mustang Fansite</p>  
@@ -28,7 +28,7 @@
 </div>
 </div>
  <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
-<div class="gen-cont">
+<div id="Photos" class="gen-cont">
  <div class="gen-iandt">
 <img class="gen-image" src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg"  alt="Second Generation Mustang">
 <div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
@@ -51,7 +51,7 @@
 <div class="author"><p>-Carrol Shelby, Race Car Designer</p></div>
 </div>
 </div>
-<div class="b2-cont">
+<div id="Signup" class="b2-cont">
 <div class="b-cont">
 <div class="cta-cont">
 <p style="font-weight: bold;color: white;">Call to action! It's time!</p>
