Remove id selector from gen-cont and add id selector to h1

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <button class="bt-1">Sign up</button>     
 </div>
 </div>
- <h1 style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
-<div id="Photos" class="gen-cont">
+ <h1 id="Photos" style="display: flex; justify-content: center;">Ford Mustangs throughout the years</h1>
+<div class="gen-cont">
  <div class="gen-iandt">
 <img class="gen-image" src="https://cdn.pixabay.com/photo/2021/07/21/18/32/car-6483723_1280.jpg"  alt="Second Generation Mustang">
 <div class="gen-text"><p>2nd Generation Mustang</p><p>(1973-1978)</p></div>
